--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <ul>
         <li>Introdução ao HTML</li>
-        <li>Pré-requisitos</li>
-        <li>Guias</li>
+        <li>O que é HTML?</li>
+        <li>O que é um hiperlink?</li>
     </ul>
 
     <h2>Introdução ao HTML</h2>
@@ -28,10 +28,19 @@
     <p>interesse!</p>
 
     <h2>O que é HTML?</h2>
-    <p>HTML (HyperText Markup Language) não é uma linguagem de programação, é uma linguagem de</p>
+    <p><a href="https://developer.mozilla.org/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Getting_started">HTML</a> (HyperText Markup Language) não é uma linguagem de programação, é uma linguagem de</p>
     <p>marcação utilizada para dizer ao seu navegador como estruturar a página web que você visita. A</p>
     <p>página pode ser tanto complicada como simples quanto o desenvolvedor web desejar que seja.</p>
     <p>HTML consiste em uma série de elementos que você usa para anexar, envolver ou marcar diferentes</p>
+
+    <h2>O que é um hiperlink?</h2>
+    <p>Os hiperlinks são uma das inovações mais interessantes que a Web oferece. Bem, eles são uma</p>
+    <p>característica da Web desde o início, mas são o que torna a Web como ela é — eles nos permitem</p>
+    <p>vincular nossos documentos a qualquer outro documento (ou outro recurso) que queremos. Também</p>
+    <p>podemos vincular para partes específicas de documentos e podemos disponibilizar aplicativos em</p>
+    <p>um endereço web simples (em contraste com aplicativos nativos, que devem ser instalados e tantas</p>
+    <p>outras coisas). Qualquer conteúdo da web pode ser convertido em um link, para que, quando clicado</p>
+    <p>(ou ativado de outra forma) fará com que o navegador vá para outro endereço (<a href="https://developer.mozilla.org/pt-BR/docs/Glossary/URL">URL</a>).</p>
 </body>
 
 </html>
