--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 
 <body>
-    <h1 id="inicio">Módulo I - Fundamentos do texto em HTML</h1>
+    <h1 id="inicio" >Módulo I - Fundamentos do texto em HTML</h1>
     <hr />
 
     <h2>Índices</h2>
 
     <ul>
-        <li>Introdução ao HTML</li>
-        <li>O que é HTML?</li>
-        <li>O que é um hiperlink?</li>
+        <li><a href="#introdução">Introdução ao HTML</a></li>
+        <li><a href="#html">O que é HTML?</a></li>
+        <li><a href="#hiperlink">O que é um hiperlink?</a></li>
     </ul>
 
-    <h2>Introdução ao HTML</h2>
+    <h2 id="introdução">Introdução ao HTML</h2> 
+    <small>(Voltar)</small>
     <p>Neste artigo nós abordamos os princípios básicos do HTML, para você começar. Definimos os</p>
     <p>elementos, atributos e todos os outros termos importantes que você possa ter ouvido e onde eles se</p>
     <p>encaixam na linguagem. Também mostramos como um elemento HTML é estruturado, como uma</p>
@@ -27,20 +28,22 @@
     <p>linguagem. Ao longo do caminho, nós brincaremos com um pouco de HTML, para despertar seu</p>
     <p>interesse!</p>
 
-    <h2>O que é HTML?</h2>
-    <p><a href="https://developer.mozilla.org/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Getting_started">HTML</a> (HyperText Markup Language) não é uma linguagem de programação, é uma linguagem de</p>
+    <h2 id="html">O que é HTML?</h2> 
+    <small>(Voltar)</small>
+    <p><a href="https://developer.mozilla.org/pt-BR/docs/Learn/HTML/Introduction_to_HTML/Getting_started" target="_blank">HTML</a> (HyperText Markup Language) não é uma linguagem de programação, é uma linguagem de</p>
     <p>marcação utilizada para dizer ao seu navegador como estruturar a página web que você visita. A</p>
     <p>página pode ser tanto complicada como simples quanto o desenvolvedor web desejar que seja.</p>
     <p>HTML consiste em uma série de elementos que você usa para anexar, envolver ou marcar diferentes</p>
 
-    <h2>O que é um hiperlink?</h2>
+    <h2 id="hiperlink">O que é um hiperlink?</h2> 
+    <small><a href="#inicio">(Voltar)</a></small>
     <p>Os hiperlinks são uma das inovações mais interessantes que a Web oferece. Bem, eles são uma</p>
     <p>característica da Web desde o início, mas são o que torna a Web como ela é — eles nos permitem</p>
     <p>vincular nossos documentos a qualquer outro documento (ou outro recurso) que queremos. Também</p>
     <p>podemos vincular para partes específicas de documentos e podemos disponibilizar aplicativos em</p>
     <p>um endereço web simples (em contraste com aplicativos nativos, que devem ser instalados e tantas</p>
     <p>outras coisas). Qualquer conteúdo da web pode ser convertido em um link, para que, quando clicado</p>
-    <p>(ou ativado de outra forma) fará com que o navegador vá para outro endereço (<a href="https://developer.mozilla.org/pt-BR/docs/Glossary/URL">URL</a>).</p>
+    <p>(ou ativado de outra forma) fará com que o navegador vá para outro endereço (<a href="https://developer.mozilla.org/pt-BR/docs/Glossary/URL" target="_blank">URL</a>).</p>
 </body>
 
 </html>
