Finalização do Desafio - Módulo I

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
     <p>um endereço web simples (em contraste com aplicativos nativos, que devem ser instalados e tantas</p>
     <p>outras coisas). Qualquer conteúdo da web pode ser convertido em um link, para que, quando clicado</p>
     <p>(ou ativado de outra forma) fará com que o navegador vá para outro endereço (<a href="https://developer.mozilla.org/pt-BR/docs/Glossary/URL" target="_blank">URL</a>).</p>
+
+    <h3>Referências</h3>
+    <ul>
+        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">Esse link leva a toda estrutura do HTML.</a></li>
+        <li><a href="https://www.youtube.com/watch?v=aJQgst_SHM4&t=40s" target="_blank">Esse link leva a um video explicativo sobre HTML.</a></li>
+    </ul>
 </body>
 
 </html>
